# ratestask

./: Dockerfile  README.md  docker-compose.yml  prices.csv  rates.sql  rates_db.sql
db/: Dockerfile  destinations.csv  rates.sql
routes_api_service/: Dockerfile  README.md  main.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  setup.py
routes_api_service/routes_api_service/: app.py  const.py  settings.py  types.py
routes_api_service/routes_api_service/io/: rates_repo_abc.py
routes_api_service/routes_api_service/io/rates_repo_postgres/: rates_repo_postgres.py
routes_api_service/routes_api_service/io/rates_repo_postgres/sql/: rates_query.sql
routes_api_service/routes_api_service/models/: request_args.py
routes_api_service/tests/integration_tests/: integration_test.py
routes_api_service/tests/perf_test/: perf_test.py
routes_api_service/tests/unit/: conftest.py  test_api.py
