[tool.poetry]
name = "routes_api_service"
version = "0.1.0"
description = "HTTP-based API returns a list with the average prices for each day on a route between two destinations (ports or regions)"
authors = ["Artsiom Kaltovich <KaltovichArtyom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2"
pydantic = "^1.10"
psycopg2 = "^2.9.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
httpx = "^0.23"
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
